# MechanisticInvarianceTesting_GLMs

./: .gitignore  LICENSE  README.md  RESULTS.md  pyproject.toml  requirements.txt
data/results/: all_results.json  at_titration_caduceus_results.json  at_titration_evo2_1b_results.json  at_titration_results.json  biophysical_comparison.json  caduceus_results.json  dinucleotide_control_sequences.json  error_analysis_results.json  evo2_1b_results.json  grover_results.json  hyenadna_results.json  kmer_results.json  metrics.json  mpra_library.json  negative_mes_results.json  nt_500m_results.json  positional_sweep_caduceus_results.json  positional_sweep_evo2_1b_results.json  positional_sweep_results.json  pwm_results.json  random_results.json  spacing_caduceus_results.json  spacing_evo2_1b_results.json  spacing_results.json  strand_caduceus_results.json  strand_evo2_1b_results.json  strand_results.json
data/sequences/: all_sequences.fasta  all_sequences.json  class_A.json  class_B.json  class_C.json  class_D.json  class_E.json  class_F.json  class_G.json  class_H.json
figures/: all_metrics.json  benchmark_report.md  model_comparison.csv
logs/: run_output.txt
mit_benchmark/: __init__.py
mit_benchmark/evaluation/: __init__.py  analysis.py  metrics.py
mit_benchmark/models/: __init__.py  autoregressive.py  base.py  baselines.py  biophysical.py  masked_lm.py
mit_benchmark/sequences/: __init__.py  generator.py  motifs.py  natural.py
mit_benchmark/utils/: __init__.py  config.py
scripts/: analyze_results.py  compute_metrics.py  experiment_at_titration.py  experiment_dinucleotide_control.py  experiment_error_analysis.py  experiment_mpra_validation.py  experiment_negative_mes.py  experiment_positional_sweep.py  experiment_spacing.py  experiment_strand.py  generate_sequences.py  rpa_pwm.py  run_all_experiments.py  run_biophysical_comparison.py  run_inference.py
