[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mit-benchmark"
version = "0.1.0"
description = "Mechanistic Invariance Test for Genomic Language Models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bryan Cheng", email = "bcbc7264@gmail.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["genomics", "language-models", "benchmark", "promoters", "e-coli"]

dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "huggingface-hub",
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "tqdm",
    "biopython",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/bryanc5864/MITproject"
Repository = "https://github.com/bryanc5864/MITproject"
Issues = "https://github.com/bryanc5864/MITproject/issues"

[project.scripts]
mit-generate = "scripts.generate_sequences:main"
mit-inference = "scripts.run_inference:main"
mit-metrics = "scripts.compute_metrics:main"
mit-analyze = "scripts.analyze_results:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mit_benchmark*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
